fixed CTA button alignment
forgot to remove default padding inherited from list

--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ html, body {
 ul {
   list-style-type: none;
   display: inline-flex;
+  padding: 0;
 }
 
 .glass-smoked {
